--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,20 @@
 [package]
 
 name = "strided"
-version = "0.0.1"
-authors = ["Huon Wilson <dbau.pp+github@gmail.com>"]
+version = "0.1.0"
+authors = ["Huon Wilson <dbau.pp@gmail.com>"]
+
+homepage = "https://github.com/huonw/strided-rs"
+repository = "https://github.com/huonw/strided-rs"
+documentation = "http://huonw.github.io/strided-rs/strided/"
+license = "MIT/Apache-2.0"
+keywords = []
+readme = "README.md"
+description = """
+Strided slices.
+
+This library provides two types `Strided` and `MutStrided` as
+generalised forms of `&[T]` and `&mut [T]` respectively, where the
+elements are regularly spaced in memory, but not necessarily
+immediately adjacently.
+"""
