--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "strided"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Huon Wilson <dbau.pp@gmail.com>"]
 
 homepage = "https://github.com/huonw/strided-rs"
@@ -18,3 +18,6 @@ generalised forms of `&[T]` and `&mut [T]` respectively, where the
 elements are regularly spaced in memory, but not necessarily
 immediately adjacently.
 """
+
+[dev-dependencies]
+num = "~0.0.3"
