--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "strided"
-version = "0.2.6"
+version = "0.2.7"
 authors = ["Huon Wilson <dbau.pp@gmail.com>"]
 
 homepage = "https://github.com/huonw/strided-rs"
@@ -20,4 +20,4 @@ immediately adjacently.
 """
 
 [dev-dependencies]
-num = "~0.1.2"
+num = "0"
